fixed all endpoints
